--- a/src/Recollections.Blazor.UI/wwwroot/css/site.css
+++ b/src/Recollections.Blazor.UI/wwwroot/css/site.css
@@ -25694,6 +25694,10 @@ input.input-number-noarrows[type=number] {
   top: 10px;
   z-index: 401;
   left: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0.25rem;
 }
 .map-container .card .card-header,
 .map-container .card .card-footer {
